Fixed spacing for Title component

--- a/client/src/components/Title/Title.module.css
+++ b/client/src/components/Title/Title.module.css
@@ -3,11 +3,11 @@ section,
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 8px;
 }
 
 section {
   margin-top: 60px;
-  gap: 24px;
 }
 
 h1 {
