--- a/client/src/pages/Signin/Signin.module.css
+++ b/client/src/pages/Signin/Signin.module.css
@@ -1,5 +1,6 @@
 .cta-container {
   text-align: center;
+  margin-top: 48px;
 }
 
 .cta-container a {
